--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2643,6 +2643,30 @@ img {
   color: #555;
 }
 
+/*---- REGISTER MODAL ----*/
+
+#register-modal .modal-content {
+  border-radius: 0;
+}
+#register-modal .modal-dialog {
+  margin: 100px auto;
+  width: 320px;
+}
+#register-modal .modal-dialog h4 {
+  border-bottom: 1px solid #ccc;
+  color: #666;
+  font-weight: bold;
+  padding-bottom: 10px;
+}
+#register-modal .modal-dialog .aa-register-now {
+  border-top: 1px solid #ccc;
+  margin-top: 20px;
+  font-size: 14px;
+  padding-top: 10px;
+}
+#register-modal .modal-dialog .aa-register-now a {
+  margin-left: 5px;
+}
 /*---- LOGIN MODAL ----*/
 
 #login-modal .modal-content {
